<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CanvasActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bground_image"/>

    <Button
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/clear_button"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/done_button"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/red_button"
        android:backgroundTint="#FF0000"
        android:layout_above="@id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/blue_button"
        android:backgroundTint="#0000FF"
        android:layout_above="@id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/green_button"
        android:backgroundTint="#00FF00"
        android:layout_above="@id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"/>

</RelativeLayout>